# django-job

./: README.md  main.py  pyproject.toml
core/: settings.py  urls.py
jobs/: admin.py  models.py  urls.py  views.py
jobs/migrations/: 0001_initial.py
templates/: base.html
templates/jobs/: job_confirm_delete.html  job_detail.html  job_form.html  job_list.html  job_my_list.html
users/: admin.py  forms.py  managers.py  models.py
users/migrations/: 0001_initial.py  0002_customuser_is_agency.py
